# ReMarkable2Typewriter

./: Cargo.toml  README.md  build_pack.sh  build_push_run.sh
legacy/: hershey-fonts.cpp
src/: devices.rs  drawer.rs  hershey_font.rs  keyboard.rs  main.rs  wacom.rs
