[package]
name = "ReMarkable2Typewriter"
version = "0.1.0"
authors = ["Simon Struck <simon@simonscode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keycodes = "0.1.0"
lazy_static = "1.4.0"
input-linux = "0.4.0"
hex = "0.4.2"
evdev = "0.10.2"